[package]
name = "minuit"
version = "0.2.0"
edition = "2021"
description = "Minimal GUI framework"
license = "MIT"
documentation = "https://docs.rs/minuit/0.2.0"
homepage = "https://github.com/louisdevie/minuit"
repository = "https://github.com/louisdevie/minuit"

[dependencies.sdl2]
version = "0.35.1"
default-features = false
features = ["ttf"]
